<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navWipeData"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            android:title="@string/wipe_data" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/images"
            android:icon="@drawable/liger"
            android:title="@string/images" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logs"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/log" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fire"
            android:icon="@drawable/ic_blister_pills_round_x4_negative"
            android:title="@string/fire" />
    </group>

    <item android:title="@string/session">
        <menu>
            <item
                android:id="@+id/navExit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
